--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout.html.twig
@@ -9,7 +9,7 @@
             {% endblock %}
             {% include 'AppSiteBundle::pagelayout/page_meta.html.twig' %}
         </head>
-    <body id="page-top" data-spy="scroll" data-target="#bs-navbar-collapse">
+    <body id="page-top" data-spy="scroll" data-target="#mainNav">
         {% block content %}{% endblock %}
 
         {% include 'AppSiteBundle::pagelayout/page_footer.html.twig' %}
