--- a/src/App/Bundle/SiteBundle/Resources/public/css/main.css
+++ b/src/App/Bundle/SiteBundle/Resources/public/css/main.css
@@ -2,25 +2,91 @@ html,
 body {
   height: 100%;
   width: 100%;
+  font-size: 15px;
 
 }
 body {
-  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   color:#333;
   position: relative;
 }
 
-.navbar-nav.navbar-left li.active {
-  background-color: #e7e7e7;
+h2 {
+  font-size: 54px;
+  text-align: center;
+  color:#9a2323;
+  letter-spacing: 5px;
 }
 
-hr {
-  border-color: #333;
-  border-width: 7px;
-  max-width: 40px;
+
+
+section .lead {
+  color: #727878;
+  font-size: 16px;
+  text-align: center;
 }
-hr.light {
-  border-color: white;
+
+.container {
+  max-width: 1280px;
+  padding: 40px 180px;
+}
+
+.scroll-down {
+  height: 80px;
+  width: 110px;
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  right: 5%;
+  background-color: #222222;
+  text-align: center;
+  z-index: 6;
+}
+
+.scroll-down i {
+  color: #FFFFFF;
+  font-size: 30px;
+  padding-right: 2px;
+  padding-top: 20px;
+  animation-name: wiggle;
+  animation-duration: 1.2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+}
+
+@keyframes wiggle {
+  0% {
+    padding-top: 20px;
+  }
+
+  50% {
+    padding-top: 28px;
+  }
+
+  100% {
+    padding-top: 20px;
+  }
+}
+
+.navbar  { border: 0px; background-color: #222222; position: absolute; top: 100%; right: 5%; width: 110px; z-index: 999; }
+.navbar .navbar-collapse { padding: 0px; max-height: none; }
+.navbar .navbar-nav { float: none; }
+.navbar-nav { margin: 0px; }
+.navbar .nav > li { display: block; float: none; height: 80px; }
+.navbar .nav > li a { display: block;  height: 80px; text-align: center; padding-top: 30px; font-weight: 600; color: #FFFFFF; }
+.navbar .nav > li a:hover, .navbar .nav > li a:focus { color: #999999; }
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus { background: #9a2323; color: #FFFFFF; }
+.navbar-default .navbar-toggle:hover .icon-bar,
+.navbar-default .navbar-toggle:focus .icon-bar { background: #222222; }
+
+.fixed  { position: fixed; top: 60px; }
+
+
+hr {
+  margin: 40px 0px;
+  border-color: #727878;
+  opacity: 0.2;
 }
 a {
   -webkit-transition: all 0.35s;
@@ -38,31 +104,193 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 300;
+}
+
+h4 {
+  font-weight: 700;
+  margin-bottom: 10px;
 }
 
 h1 {
-  font-size: 45px;
+  font-size: 63px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(255,255,255,0.35);
+  display: inline-block;
 }
 
-h2 {
-  font-size: 40px;
-  letter-spacing: 5px;
+h3 {
+  font-size: 28px;
+  color: #9a2323;
+  margin-bottom: 20px;
 }
 
-.blue {
-  color:#3498db;
+.red {
+  color: #9a2323;
 }
+.lead {
+  font-size: 28px;
+  color: #FFFFFF;
+}
+
 
 .bg-blue {
   background-color: #E4F1FE;
   background-size: cover;
 }
 
-#contact h2 {
+#profile .row > div img {
+  width: 100%;
+  max-width: 246px;
+  height: auto;
+  border-radius: 50%;
+  border: 8px solid #9a2323;
+}
+
+#profile .lead {
+  text-align: center;
+}
+
+#contact {
+  padding-bottom: 200px;
+}
+
+#projects .row > div { margin-bottom: 30px; }
+#projects figure { position: relative; overflow: hidden; }
+#projects figure h3 { color: #FFF; font-weight: 600; margin-bottom: 5px; font-size: 20px}
+#projects figure p > strong { width: 60px; display: inline-block; margin: 0px; }
+#projects figure img { width: 110%; }
+#projects figure figcaption {
+  padding: 20px 30px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+}
+#projects figure a {
+  z-index: 1000;
+  text-indent: 200%;
+  white-space: nowrap;
+  font-size: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+}
+#projects figure .icon {
+  background: #9a2323;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 48px;
+  height: 48px;
+}
+#projects figure .icon i {
+  font-size: 18px;
+  line-height: 18px;
+  padding: 15px;
+}
+
+figure.effect {
+  background: #9a2323;
+  color: #FFF;
+}
+
+figure.effect img {
+  width: -webkit-calc(100% + 20px);
+  width: calc(100% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+figure.effect:hover img {
+  opacity: 0.2;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+figure.effect figcaption {
   text-align: left;
-  font-size: 60px;
+}
+
+figure.effect h3 {
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 20px;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+}
+
+figure.effect:hover h3 {
+  opacity: 1;
+}
+
+figure.effect h3::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  content: '';
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%,0,0);
+}
+
+figure.effect:hover h3::after {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+figure.effect p {
+  padding-top: 10px;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(100%,0,0);
+  transform: translate3d(100%,0,0);
+}
+
+figure.effect:hover p {
+  opacity: 1;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+#experiences .experience {margin-bottom: 20px;}
+#experiences .experience p > strong { display: block; padding-top: 8px; margin-bottom: 10px; }
+#experiences .experience .experience-details { display: block; margin-top: 6px; }
+#experiences .experience .experience-details * { color: #9a2323; }
+#experiences .experience .experience-details .seperator { color: #BCBCBC; }
+
+
+.background-gray {
+  background: #434242;
+}
+
+#contact h2 {
+  color:#fff;
   margin-bottom: 30px;
+}
+#contact  p.lead {
+  text-align: center;
+}
+
+.footer {
+  color:#fff;
+  font-size: 13px;
+  font-weight: 200;
 }
 
 #contact  p, #contact a {
@@ -71,8 +299,16 @@ h2 {
 }
 
 #contact a {
-  border-bottom: 1px dotted #fff;
   color: #fff;
+  line-height: 24px;
+  margin-bottom: 20px;
+  display: block;
+}
+
+#contact a i {
+  font-size: 32px;
+  vertical-align: sub;
+  margin-right: 10px;
 }
 
 #contact a:hover, #contact a:focus, #contact a:active {
@@ -80,10 +316,6 @@ h2 {
   border-bottom: none;
 }
 
-#contact p {
-  text-transform: uppercase;
-  margin-bottom: 5px;
-}
 
 #contact .subtitle {
   margin-bottom: 30px;
@@ -111,10 +343,7 @@ p {
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 20px;
-}
-section {
-  color:#fff;
-  padding: 100px 0;
+  font-weight: 200;
 }
 
 .padding-formule {
@@ -138,9 +367,6 @@ h2.formule, h2.blog, h2.contact {
   visibility: hidden;
 }
 
-#contact, #about {
-  background-color: #eeeeee;
-}
 
 .details .fa {
   margin-right: 10px;
@@ -176,24 +402,6 @@ header .header-content .header-content-inner {
   display: none;
 }
 
-.navbar-default {
-  background-color: #fff;
-  border-bottom: 1px solid #eee;
-  font-family: 'Lato', 'Helvetica Neue', sans-serif;
-  -webkit-transition: all 0.35s;
-  -moz-transition: all 0.35s;
-  transition: all 0.35s;
-  border-radius:0;
-  margin-bottom: 0;
-}
-.navbar-default .navbar-header .navbar-brand {
-  font-family: 'Lato', 'Helvetica Neue', sans-serif;
-  font-weight: 700;
-}
-.navbar-default .navbar-header .navbar-brand:hover,
-.navbar-default .navbar-header .navbar-brand:focus {
-  color: #eee;
-}
 
 .my-picture img {
   max-width: 100%;
@@ -211,35 +419,7 @@ header .header-content .header-content-inner {
   margin: 40px auto;
 }
 
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: transparent;
-}
 
-.navbar-default .navbar-header .navbar-toggle {
-  font-weight: 700;
-  font-size: 12px;
-  color: #222222;
-  text-transform: uppercase;
-}
-.navbar-default .nav > li > a,
-.navbar-default .nav > li > a:focus {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 13px;
-  text-align: center;
-}
-.navbar-default .nav > li > a:hover,
-.navbar-default .nav > li > a:focus:hover {
-  color: #333;
-}
-.navbar-default .nav > li.active > a,
-.navbar-default .nav > li.active > a:focus {
-  background-color: transparent;
-}
-.navbar-default .nav > li.active > a:hover,
-.navbar-default .nav > li.active > a:focus:hover {
-  background-color: transparent;
-}
 
 .carousel-inner .item {
   min-height: 400px;
@@ -258,10 +438,7 @@ header .header-content .header-content-inner hr {
   margin: 30px auto;
 }
 header .header-content .header-content-inner p {
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 16px;
-  margin-bottom: 50px;
+  margin-top: 10px;
 }
 
 .grid__item h3 {
@@ -274,10 +451,6 @@ header {
   background-position: 50% 0;
 }
 
-.navbar-collapse {
-  padding-right: 0;
-  padding-left: 0;
-}
 
 .text-primary {
   color: #F05F40;
@@ -295,27 +468,21 @@ header {
   padding: 0;
 }
 
-.navbar-nav > li:hover {
-  background-color: #eee;
-}
-.navbar-nav > li:hover > a {
-  color: #333;
-}
 
-.btn-twitter:hover > i {
+.twitter:hover > i, .twitter:hover {
   color:#1DA1F2;
 }
-.btn-linkedin:hover > i {
+.linkedin:hover > i, .linkedin:hover {
   color:#0077b5;
 }
-.btn-github:hover > i {
+.github:hover > i, .github:hover {
   color:#6cc644;
 }
 
 
 
-.btn-instagram:hover > i {
-  color:#5851db;
+.other:hover > i {
+  color:#9a2323;
 }
 
 .btn-contact:hover > i {
@@ -327,19 +494,12 @@ header {
   font-size: 22px;
 }
 
-.navbar-nav.navbar-left li, .padding-navbar {
-  padding: 3px 0;
-}
 
 .flag-icon {
   width: 2em;
   line-height: 20px;
 }
 
-.navbar-default .navbar-toggle {
-  border:none;
-
-}
 
 .item-formule .title {
   padding: 30px 20px;
@@ -380,14 +540,7 @@ header {
 
 }
 
-#presentation h3 {
-  font-size: 24px;
-  margin-bottom: 25px;
-}
 
-#presentation hr {
-  margin-bottom: 20px;
-}
 
 .item-formule .ezrichtext-field p {
   padding-top: 40px;
@@ -650,16 +803,39 @@ img::-moz-selection {
   100% { opacity:1; }
 }
 
-#contact {
-  padding:150px 0 250px 0;
-  background-size: cover;
-}
-
-#works {
-  padding-bottom: 0;
-  padding-top: 20px;
+.bg-grey {
   background-color: #eee;
 }
+
+ul.no-bullets {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+#abilities ul > li .ability-score {
+  float: right;
+}
+
+#abilities ul > li .ability-score i.filled {
+  color: #9a2323;
+}
+
+#abilities ul > li { min-height: 30px; padding: 3px 0px; }
+#abilities ul > li:hover { background: #F2F2F2; }
+#abilities ul > li .ability-title { display: inline-block; width: 60%; }
+#abilities ul > li .ability-score { float: right; }
+#abilities ul > li .ability-score i {
+  color: #DFE0E0;
+  font-size: 14px;
+
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+#abilities ul > li:hover .ability-score i { margin-left: 2px; }
 
 .header-text {
   margin-top:15px;
@@ -694,66 +870,52 @@ img::-moz-selection {
 }
 
 @media (max-width: 767px) {
+ .scroll-down {
+      width: 100%;
+      right: 0px;
+    }
+  .navbar {
+    left: 0px;
+    width: 100%;
+  }
   .padding-tb {
     padding: 20px 0;
   }
 
-  .item-formule, .article-item {
-    margin-top: 20px;
-  }
-
-  h2.formule, h2.blog, h2.contact {
-    font-size: 28px;
-  }
-  .navbar-nav {
-    margin:0;
-  }
-  .header-text.btn {
-    height: auto;
-    white-space: inherit;
-  }
-  .icon-marginb {
-    margin-bottom: 20px;
-  }
-
-  #contact h2 {
-    font-size: 25px;
-  }
-  #contact p, #contact a {
-    font-size: 15px;
-  }
   .marginbtmobile {
     margin-bottom: 20px;
   }
 
-  #contact a {
-    border-bottom: none;
+  header .header-content .header-content-inner {
+    margin-top:50%;
   }
 
+  .fixed { top: 0px; }
 
-  #contact .subtitle {
-    font-size: 16px;
-  }
+  .container { padding: 60px 20px; min-width: 280px; }
+  .hidden-phone { display: none; }
 
-}
+  #profile .row * { text-align: center; }
 
-@media (max-width: 320px) {
-  h2.formule, h2.contact {
-    font-size: 22px;
-  }
+  #experiences .experience .experience-details > span { display: block; margin-bottom: 6px; }
+  #experiences .experience .experience-details .seperator { display: none; }
+
+  #interests .left { float: none; }
+  #interests .right { float: none; }
+
+  #interests > * { text-align: center; }
+  #interests img { width: 50%; height: auto; float: none !important; }
+  #interests .interest-content { padding: 20px 0px; }
+
+  #contact { padding-bottom: 60px; }
+  #contact a .icon { float: left; margin-right: 10px; }
 }
 @media (min-width: 768px) {
-  .navbar-default .nav>li>a {
-    font-size: 10px;
-  }
 
 }
 
 
 @media (min-width: 992px) {
-  .navbar-default .nav>li>a {
-    font-size: 13px;
-  }
 }
 @media (min-width: 1024px) {
 }
