--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/works.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/works.html.twig
@@ -1,21 +1,29 @@
-<section id="works" class="container-fluid">
-    <h2 class="formule black-color text-center text-uppercase">- {{ 'app.subtitle.works'|trans }} -</h2>
+<div class="bg-grey">
+<section id="projects" class="container">
+    <h2>{{ 'app.title.project'|trans }}</h2>
+    <p class="lead">
+        “{{ 'app.quote.project'|trans }}”<br>- {{ 'app.quote.project.author'|trans }}
+    </p>
+
+    <hr>
     <div class="row">
         {% for work in works %}
-            <div class="col-md-4">
-                <div class="row">
-                    <div class="item-work">
-                        <a target="_blank" href="{{ ez_field_value(work, 'url') }}">
-                            {{ ez_render_field(work, 'image') }}
-                            <span class="text-hover">
-                                {{ ez_render_field(work, 'name') }}<br/>
-                                <i>{{ ez_render_field(work, 'description') }}</i>
-                            </span>
-                        </a>
-                    </div>
+        <div class="col-md-6 col-sm-12 col-xs-12">
+            <figure class="effect">
+                {{ ez_render_field(work, 'image') }}
 
-                </div>
-            </div>
+                <figcaption>
+                    <h3>{{ ez_render_field(work, 'name') }}</h3>
+                    {{ ez_render_field(work, 'description_site') }}
+                    <p><strong>Tags:</strong> <br>{{ ez_render_field(work, 'description') }}</p>
+                    <a href="http://studiomals.com" target="_blank">{{ 'app.show_more'|trans }}</a>
+				<span class="icon">
+					<i class="fa fa-external-link" aria-hidden="true"></i>
+				</span>
+                </figcaption>
+            </figure>
+        </div>
         {% endfor %}
     </div>
 </section>
+    </div>
