--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_header.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_header.html.twig
@@ -6,24 +6,11 @@
     <div class="header-content wow fadeInUp">
         <div class="header-content-inner">
             <h1>{{ 'app.global.title'|trans|raw }}</h1>
-            <div class="header-text btn">
-                <span class="typed"></span>
-            </div>
-
-            <input type="hidden" id="typedone" value="{{ 'app.typed.parttwo'|trans }}" />
-            <input type="hidden" id="typedtwo" value="{{ 'app.typed.partthree'|trans }}" />
+            <p class="lead">{{ 'app.global.subtitle'|trans }}</p>
         </div>
     </div>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-xs-offset-4 col-xs-4">
-                <a class="page-scroll" href="#presentation">
-                    <div class="mouse-icon">
-                        <div class="wheel"></div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
+    <a href="#profile" class="scroll-down">
+        <i class="fa fa-arrow-down"></i>
+    </a>
 </header>
 <div class="clearfix"></div>
