--- a/src/App/Bundle/SiteBundle/Resources/public/css/main.css
+++ b/src/App/Bundle/SiteBundle/Resources/public/css/main.css
@@ -908,7 +908,7 @@ ul.no-bullets {
   #interests .interest-content { padding: 20px 0px; }
 
   #contact { padding-bottom: 60px; }
-  #contact a .icon { float: left; margin-right: 10px; }
+  #contact a  { font-size: 11px }
 }
 @media (min-width: 768px) {
 
