--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/contact.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/contact.html.twig
@@ -1,5 +1,5 @@
 <div class="background-gray">
-    <section id="contact" class="container">
+    <section id="contact" class="container wow fadeInUp">
         <h2>{{ 'app.title.contact'|trans }}</h2>
         <p class="lead">
             “{{ 'app.quote.contact'|trans }}”<br>- {{ 'app.quote.contact.author'|trans }}
