--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/experience.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/experience.html.twig
@@ -1,4 +1,4 @@
-<div class="experience row">
+<div class="experience row wow fadeInLeft">
     <div class="col-md-4">
         <h4>{{ ez_field_value(item, 'name') }}</h4>
         <p class="experience-period">
