--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/skill.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/skill.html.twig
@@ -1,22 +1,10 @@
 {% if items|length > 1 %}
     <div class="col-md-6">
-
         <ul class="no-bullets">
             {% for item in items[items|length//2:] %}
-
                 <li>
                     <span class="ability-title">{{ ez_field_value(item, 'name') }}</span>
-				<span class="ability-score">
-
-
-					<i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-
-
-				</span>
+                    {% include 'AppSiteBundle::content/parts/skill_rating.html.twig' with {'rating': ez_field_value(item, 'note').value} %}
                 </li>
             {% endfor %}
         </ul>
@@ -24,20 +12,9 @@
     <div class="col-md-6">
         <ul class="no-bullets">
             {% for item in items[:items|length//2] %}
-
                 <li>
                     <span class="ability-title">{{ ez_field_value(item, 'name') }}</span>
-				<span class="ability-score">
-
-
-					<i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-
-
-				</span>
+                    {% include 'AppSiteBundle::content/parts/skill_rating.html.twig' with {'rating': ez_field_value(item, 'note').value} %}
                 </li>
             {% endfor %}
         </ul>
@@ -46,20 +23,9 @@
         <div class="col-md-6">
             <ul class="no-bullets">
                 {% for item in items %}
-
                     <li>
                         <span class="ability-title">{{ ez_field_value(item, 'name') }}</span>
-				<span class="ability-score">
-
-
-					<i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                    <i class="fa fa-star filled" aria-hidden="true"></i>
-
-
-				</span>
+                        {% include 'AppSiteBundle::content/parts/skill_rating.html.twig' with {'rating': ez_field_value(item, 'note').value} %}
                     </li>
                 {% endfor %}
             </ul>
