--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/works.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/works.html.twig
@@ -16,7 +16,7 @@
                     <h3>{{ ez_render_field(work, 'name') }}</h3>
                     {{ ez_render_field(work, 'description_site') }}
                     <p><strong>Tags:</strong> <br>{{ ez_render_field(work, 'description') }}</p>
-                    <a href="http://studiomals.com" target="_blank">{{ 'app.show_more'|trans }}</a>
+                    <a href="{{ ez_field_value(work, 'url') }}" target="_blank">{{ 'app.show_more'|trans }}</a>
 				<span class="icon">
 					<i class="fa fa-external-link" aria-hidden="true"></i>
 				</span>
