--- a/src/App/Bundle/SiteBundle/Resources/views/content/full/homepage.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/full/homepage.html.twig
@@ -87,34 +87,31 @@
         </div>
         <hr>
         <h3>{{ 'app.title.others'|trans }}</h3>
-        <div class="row">
-            <ul class="no-bullets contact-ul">
-                <li>
-                    <i class="fa fa-lightbulb-o fa-orange fa-3x"></i><br/>
-                    {{ 'app.skill.creative'|trans }}
-                </li>
-                <li>
-                    <i class="fa fa-users fa-green fa-3x"></i><br/>
-                    {{ 'app.skill.team'|trans }}
-                </li>
-                <li>
-                    <i class="fa fa-heart fa-red fa-3x"></i><br/>
-                    {{ 'app.skill.passion'|trans }}
-                </li>
-                <li>
-                    <i class="fa fa-laptop fa-3x"></i><br/>
-                    {{ 'app.skill.web'|trans }}
-                </li>
-                <li>
-                    <i class="fa fa-globe fa-blue fa-3x"></i><br/>
-                    {{ 'app.skill.travel'|trans }}
-                </li>
-                <li>
-                    <i class="fa fa-trophy fa-orange fa-3x"></i><br/>
-                    {{ 'app.skill.sport'|trans }}
-                </li>
-            </ul>
-
+        <div class="row margin-icon">
+            <div class="col-md-2 col-xs-4 margin-bt-mobile">
+                <i class="fa fa-lightbulb-o fa-orange fa-3x"></i><br/>
+                {{ 'app.skill.creative'|trans }}
+            </div>
+            <div class="col-md-2 col-xs-4 margin-bt-mobile">
+                <i class="fa fa-users fa-green fa-3x"></i><br/>
+                {{ 'app.skill.team'|trans }}
+            </div>
+            <div class="col-md-2 col-xs-4 margin-bt-mobile">
+                <i class="fa fa-heart fa-red fa-3x"></i><br/>
+                {{ 'app.skill.passion'|trans }}
+            </div>
+            <div class="col-md-2 col-xs-4">
+                <i class="fa fa-laptop fa-3x"></i><br/>
+                {{ 'app.skill.web'|trans }}
+            </div>
+            <div class="col-md-2 col-xs-4">
+                <i class="fa fa-globe fa-blue fa-3x"></i><br/>
+                {{ 'app.skill.travel'|trans }}
+            </div>
+            <div class="col-md-2 col-xs-4">
+                <i class="fa fa-trophy fa-orange fa-3x"></i><br/>
+                {{ 'app.skill.sport'|trans }}
+            </div>
         </div>
     </section>
     {% if works|length > 0 %}
