--- a/src/App/Bundle/SiteBundle/Resources/public/css/main.css
+++ b/src/App/Bundle/SiteBundle/Resources/public/css/main.css
@@ -1,3 +1,27 @@
+@font-face {
+    font-family: 'Lato';
+    src: url('../fonts/Lato-Regular.eot');
+    src: url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Regular.woff2') format('woff2'), url('../fonts/Lato-Regular.woff') format('woff'), url('../fonts/Lato-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'LatoLight';
+    src: url('../fonts/Lato-Light.eot');
+    src: url('../fonts/Lato-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Light.woff2') format('woff2'), url('../fonts/Lato-Light.woff') format('woff'), url('../fonts/Lato-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'LatoBold';
+    src: url('../fonts/Lato-Bold.eot');
+    src: url('../fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Bold.woff2') format('woff2'), url('../fonts/Lato-Bold.woff') format('woff'), url('../fonts/Lato-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html,
 body {
   height: 100%;
@@ -6,7 +30,7 @@ body {
 
 }
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'LatoLight', 'Helvetica Neue', sans-serif;
   color:#333;
   position: relative;
 }
@@ -77,7 +101,12 @@ section .lead {
 .ezrichtext-field p {
     margin-bottom: 5px;
 }
-
+.margin-icon > div {
+    text-align: center;
+}
+.margin-icon i {
+    margin-bottom: 5px;
+}
 .fa-red{color:#dc1616}
 .fa-green{color: #00a78e;}
 .fa-blue{color:#337ab7}
@@ -131,7 +160,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'LatoLight', 'Helvetica Neue', sans-serif;
   font-weight: 300;
 }
 
@@ -328,7 +357,6 @@ figure.effect:hover p {
 #contact a {
   color: #fff;
   line-height: 24px;
-  margin-bottom: 20px;
   display: block;
 }
 
@@ -412,7 +440,7 @@ header .header-content .header-content-inner {
   color: #fff;
   font-size: 34px;
   letter-spacing: 5px;
-  margin-top: 20%;
+  margin-top: 15%;
 }
 
 .black-title {
@@ -896,6 +924,12 @@ ul.no-bullets {
 
 }
 
+@media (max-width: 768px) {
+    .margin-bt-mobile {
+        margin-bottom: 20px;
+    }
+}
+
 @media (max-width: 992px) {
   .item-work img {
     width: 100%;
@@ -946,9 +980,7 @@ ul.no-bullets {
   #contact { padding-bottom: 60px; }
   #contact a  { font-size: 11px }
 }
-@media (min-width: 768px) {
 
-}
 
 
 @media (min-width: 992px) {
