--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_header.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_header.html.twig
@@ -9,7 +9,7 @@
             <p class="lead">{{ 'app.global.subtitle'|trans }}</p>
         </div>
     </div>
-    <a href="#profile" class="scroll-down">
+    <a href="#profile" class="scroll-down page-scroll">
         <i class="fa fa-arrow-down"></i>
     </a>
 </header>
