--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/works.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/works.html.twig
@@ -1,4 +1,4 @@
-<div class="bg-grey">
+<div class="bg-grey print-margin-top">
 <section id="projects" class="container">
     <h2>{{ 'app.title.project'|trans }}</h2>
     <p class="lead">
@@ -16,6 +16,7 @@
                     <h3>{{ ez_render_field(work, 'name') }}</h3>
                     {{ ez_render_field(work, 'description_site') }}
                     <p><strong>Tags:</strong> <br>{{ ez_render_field(work, 'description') }}</p>
+                    <p class="visible-print-block">{{ ez_field_value(work, 'url') }}</p>
                     <a href="{{ ez_field_value(work, 'url') }}" target="_blank">{{ 'app.show_more'|trans }}</a>
 				<span class="icon">
 					<i class="fa fa-external-link" aria-hidden="true"></i>
