--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_navigation.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_navigation.html.twig
@@ -17,6 +17,7 @@
             <li class=""><a class="page-scroll" href="#abilities">{{ 'app.title.abilities'|trans }}</a></li>
             <li class=""><a class="page-scroll" href="#projects">{{ 'app.title.project'|trans }}</a></li>
             <li class=""><a class="page-scroll" href="#contact">{{ 'app.title.contact'|trans }}</a></li>
+            <li class=""><a href="#" onclick="window.print();return false;">{{ 'app.title.print'|trans }}</a></li>
             {{ render( controller( 'AppSiteBundle:Common:languages', {'routeRef': ez_route()} ) ) }}
         </ul>
     </div><!-- /.navbar-collapse -->
