--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head_style.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head_style.html.twig
@@ -1,3 +1,4 @@
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 <link rel="stylesheet" href="{{ asset('assets/app/css/style.css') }}" type="text/css" />
+<link rel="stylesheet" type="text/css" href="{{ asset('assets/app/css/print.css') }}" media="print" />
