--- a/src/App/Bundle/SiteBundle/Resources/public/css/main.css
+++ b/src/App/Bundle/SiteBundle/Resources/public/css/main.css
@@ -1,4 +1,3 @@
-body {-webkit-print-color-adjust: exact;}
 @font-face {
     font-family: 'Lato';
     src: url('../fonts/Lato-Regular.eot');
@@ -311,7 +310,7 @@ figure.effect:hover h3::after {
 }
 
 figure.effect p {
-  padding-top: 10px;
+  padding-top: 0;
   opacity: 0;
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
   transition: opacity 0.35s, transform 0.35s;
