--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/experience.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/experience.html.twig
@@ -20,7 +20,7 @@
 					<span class="seperator">|</span>
 					<span class="link">
 						<i class="fa fa-link" aria-hidden="true"></i>
-						<a href="{{ ez_field_value(item, 'website') }}" target="_blank">{{ ez_field_value(item, 'website') }}</a>
+						<a rel="nofollow" href="{{ ez_field_value(item, 'website') }}" target="_blank">{{ ez_field_value(item, 'website') }}</a>
 					</span>
 
 
