--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_navigation.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_navigation.html.twig
@@ -15,9 +15,9 @@
             <li class="active"><a class="page-scroll" href="#profile">{{ 'app.title.presentation'|trans }}</a></li>
             <li class=""><a class="page-scroll" href="#experiences">{{ 'app.title.xp'|trans }}</a></li>
             <li class=""><a class="page-scroll" href="#abilities">{{ 'app.title.abilities'|trans }}</a></li>
-            <li class=""><a class="page-scroll" href="#projects">{{ 'app.title.project'|trans }}</a></li>
-            <li class=""><a class="page-scroll" href="#contact">{{ 'app.title.contact'|trans }}</a></li>
-            <li class=""><a href="#" onclick="window.print();return false;">{{ 'app.title.print'|trans }}</a></li>
+            <li><a class="page-scroll" href="#projects">{{ 'app.title.project'|trans }}</a></li>
+            <li><a class="page-scroll" href="#contact">{{ 'app.title.contact'|trans }}</a></li>
+            <li class="hidden-xs"><a href="#" onclick="window.print();return false;">{{ 'app.title.print'|trans }}</a></li>
             {{ render( controller( 'AppSiteBundle:Common:languages', {'routeRef': ez_route()} ) ) }}
         </ul>
     </div><!-- /.navbar-collapse -->
