--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/contact.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/contact.html.twig
@@ -9,32 +9,32 @@
 
         <div class="row margin-icon">
             <div class="col-md-2 col-xs-4 margin-bt-mobile">
-                <a class="twitter" href="{{ ez_field_value(content, 'twitter_url') }}" target="_blank">
+                <a rel="nofollow" class="twitter" href="{{ ez_field_value(content, 'twitter_url') }}" target="_blank">
                     <i class="fa fa-twitter"></i>
                 </a>
             </div>
             <div class="col-md-2 col-xs-4 margin-bt-mobile">
-                <a class="linkedin" href="{{ ez_field_value(content, 'linkedin_url') }}" target="_blank">
+                <a rel="nofollow" class="linkedin" href="{{ ez_field_value(content, 'linkedin_url') }}" target="_blank">
                     <i class="fa fa-linkedin"></i>
                 </a>
             </div>
             <div class="col-md-2 col-xs-4 margin-bt-mobile">
-                <a class="github" href="{{ ez_field_value(content, 'github_url') }}" target="_blank">
+                <a rel="nofollow" class="github" href="{{ ez_field_value(content, 'github_url') }}" target="_blank">
                     <i class="fa fa-github-alt"></i>
                 </a>
             </div>
             <div class="col-md-2 col-xs-4">
-                <a class="instagram" href="{{ ez_field_value(content, 'instagram_url') }}" target="_blank">
+                <a rel="nofollow" class="instagram" href="{{ ez_field_value(content, 'instagram_url') }}" target="_blank">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
             </div>
             <div class="col-md-2 col-xs-4">
-                <a class="mail" href="mailto:{{ ez_field_value(content, 'email_contact') }}">
+                <a rel="external" class="mail" href="mailto:{{ ez_field_value(content, 'email_contact') }}">
                     <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
                 </a>
             </div>
             <div class="col-md-2 col-xs-4">
-                <a class="phone" href="tel:{{ ez_field_value(content, 'phone') }}">
+                <a rel="external" class="phone" href="tel:{{ ez_field_value(content, 'phone') }}">
                     <i class="fa fa-phone" aria-hidden="true"></i>
                 </a>
             </div>
