--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head.html.twig
@@ -15,7 +15,7 @@
 <link rel="icon" type="image/png" href="{{ asset('bundles/appsite/images/favicon-16x16.png') }}" sizes="16x16" />
 <link rel="icon" type="image/png" href="{{ asset('bundles/appsite/images/favicon-128.png') }}" sizes="128x128" />
 <link rel="canonical" href="https://lucasimonin.me" />
-<link rel="alternate" hreflang="en-gb" href="https://lucasimonin.me" />
+<link rel="alternate" hreflang="en-gb" href="https://lucasimonin.me/en" />
 <meta name="application-name" content="Lucas SIMONIN CV"/>
 <meta name="msapplication-TileColor" content="#FFFFFF" />
 <meta name="msapplication-TileImage" content="{{ asset('bundles/appsite/images/mstile-144x144.png') }}" />
