add structured data

--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head.html.twig
@@ -25,3 +25,17 @@
 <meta name="msapplication-wide310x150logo" content="{{ asset('bundles/appsite/images/mstile-310x150.png') }}" />
 <meta name="msapplication-square310x310logo" content="{{ asset('bundles/appsite/images/mstile-310x310.png') }}" />
 <meta name="author" content="Lucas SIMONIN">
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Person",
+  "name": "Lucas SIMONIN",
+  "url": "https://lucasimonin.me",
+  "sameAs": [
+    "https://twitter.com/lsimonin2",
+    "https://www.linkedin.com/in/lucas-simonin-1473ab60/",
+    "https://www.instagram.com/lucas.simonin/"
+  ]
+}
+</script>
