--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_head.html.twig
@@ -32,6 +32,8 @@
   "@type": "Person",
   "name": "Lucas SIMONIN",
   "url": "https://lucasimonin.me",
+  "gender": "Male",
+  "jobTitle": "Freelance & Engineer IT",
   "sameAs": [
     "https://twitter.com/lsimonin2",
     "https://www.linkedin.com/in/lucas-simonin-1473ab60/",
